dataset1235/2025-2/610742602/users/776967928/executions/677928262_1626817775.log
== RUN (2025-08-28 19:51:29)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

r=float(input("digite o raio: "))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:51:11)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi=math.pi

r=float(input("digite o raio: "))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:53:08)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
pi=math.pi

r=float(input("digite o raio: "))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:50:32)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi+math.pi

r=float(input("digite o raio"))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:51:30)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

r=float(input("digite o raio: "))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A=pi*(r**2)
      ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:53:13)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
pi=math.pi

r=float(input("digite o raio: "))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:50:54)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi=math.pi

r=float(input("digite o raio"))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:50:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi=math.pi

r=float(input("digite o raio"))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:50:25)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi+math.pi

r=float(input("digite o raio"))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:51:13)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi=math.pi

r=float(input("digite o raio: "))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:50:52)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
inport math
pi=math.pi

r=float(input("digite o raio"))
A=pi*(r**2)
V=(4/3)*(pi)*(r**3)
print(round(A,3))
print(round(V,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 4
    inport math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
